fix(components): header background image z-index

--- a/components/widgets/Header/index.module.css
+++ b/components/widgets/Header/index.module.css
@@ -17,7 +17,9 @@
 }
 
 .content {
+  position: relative;
   display: flex;
+  z-index: 1;
   justify-content: space-between;
 }
 
@@ -63,7 +65,7 @@
   bottom: 0;
   right: 0;
   opacity: .5;
-  z-index: 1;
+  z-index: 0;
   max-height: 20rem;
   bottom: -70%;
   right: 0;
